--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 alert("Got it!");
                 return;
             }else if(guess > num){
-                alert("Sorry!  You guessed " + guess + " and the greater than the number.");
+                guess = prompt("Sorry!  You guessed " + guess + " and the greater than the number.");
             }
             else{
-                alert("Sorry!  You guessed " + guess + " and the less than the number.");
+                guess = prompt("Sorry!  You guessed " + guess + " and the less than the number.");
             }
         }
 
