--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
 
         let num = Math.floor(Math.random() * 101);
         let trys = 0;
-        let guess = prompt("guess a number between 1 and 100");
+        let input = prompt("guess a number between 1 and 100");
+        let guess = input;
         while(true){
 
             if(num == guess)
             {
                 alert("Got it!");
             }else if(guess > num){
-                guess = prompt("Sorry!  You guessed " + guess + " and the greater than the number.");
+                input = prompt("Sorry!  You guessed " + guess + " and the greater than the number.");
             }
             else{
-                guess = prompt("Sorry!  You guessed " + guess + " and the less than the number.");
+                input = prompt("Sorry!  You guessed " + guess + " and the less than the number.");
             }
         }
 
